package com.example.akenasia

class Place(val placeId: Int, val placeName: String, val placeLat: Double, val placeLong: Double)